# Hartree-Fock

./: CMakeLists.txt  README.md
basis/: 6-31G-H
include/: atom.h  atom_basis.h  basis_reader.h  fock_matrix.h  integral_tools.h  integrals.h  primitive_integrals.h  system.h  xyz_reader.h
src/: atom.c  atom_basis.c  basis_reader.c  fock_matrix.c  integral_tools.c  integrals.c  main.c  primitive_integrals.c  xyz_reader.c
src/c-logger/: logger.c  logger.h  loggerconf.c  loggerconf.h
